@@ -472,8 +472,10 @@ class Search(SearchTab):
 		user = model.get_value(iter, 2)
 		fn = model.get_value(iter, 11)
 		size = model.get_value(iter, 13)
+		bitrate = model.get_value(iter, 7)
+		length = model.get_value(iter, 8)
 		
-		self.selected_results.append((user, fn, size))
+		self.selected_results.append((user, fn, size, bitrate, length))
 		
 		if not user in self.selected_users:
 			self.selected_users.append(user)
@@ -633,7 +635,7 @@ class Search(SearchTab):
 		if not self.frame.np.transfers:
 			return
 		for file in self.selected_results:
-			self.frame.np.transfers.getFile(file[0], file[1], prefix, size=file[2])
+			self.frame.np.transfers.getFile(file[0], file[1], prefix, size=file[2], bitrate=file[3], length=file[4])
 	
 	def OnDownloadFilesTo(self, widget):
 		dir = ChooseDir(self.frame.MainWindow, self.frame.np.config.sections["transfers"]["downloaddir"])
